fix - remove changes column truncation in logs tooltip (13-fix-logs-changes-truncation)

--- a/src/pages/LogsPage/LogBodyTooltip/LogBodyTooltip.module.scss
+++ b/src/pages/LogsPage/LogBodyTooltip/LogBodyTooltip.module.scss
@@ -1,5 +1,9 @@
 .list {
   @apply list-none p-0 m-0 flex flex-col gap-1 max-h-64 overflow-y-auto text-xs;
+
+  li {
+    @apply break-words;
+  }
 }
 
 .fieldLabel {
